--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <!--HTML5 default template kullanılmıştır.-->
 <html lang="tr">
+    <!
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mahsum Aktaş</title>
+    <title>Mahsum Aktaş - Patika</title>
   </head>
   <body>
-    <h1>Mahsum Aktaş - Patika</h1>
+    <h1>Mahsum Aktaş</h1>
     <h3>Hakkımda</h3>
     <p>
       Merhaba, ben Mahsum Aktaş. İstanbul'da yaşıyorum. Yazılım alanına ilgi
