--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!--HTML5 default template kullanılmıştır.-->
 <html lang="tr">
-    <!
+  <!--Yapı ve head kısmı-->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahsum Aktaş - Patika</title>
   </head>
+  <!--Sitenin body kısmı-->
   <body>
     <h1>Mahsum Aktaş</h1>
     <h3>Hakkımda</h3>
