--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <h2>Sevdiğim Diziler</h2>
     <h3>Prison Break</h3>
     <p>
-      Dizi genel olarak işlemediği bir suçtan dolayı idam cezası almış Lincoln
-      Burrows (Dominic Purcell) 'u ve Lincoln'ün kardeşi Michael Scofield
-      (Wentworth Miller)'ın kardeşini kurtarmak için tüm yasal yolların
-      tükendiğini fark edip onu hapishaneden çıkarmak için bir kaçış planı
-      yapması ve sonrasında gelişen olayları konu alır.
+      İşlemediği bir suçtan dolayı idam cezası almış Lincoln Burrows (Dominic
+      Purcell) 'u ve Lincoln'ün kardeşi Michael Scofield (Wentworth Miller)'ın
+      kardeşini kurtarmak için tüm yasal yolların tükendiğini fark edip onu
+      hapishaneden çıkarmak için bir kaçış planı yapması ve sonrasında gelişen
+      olayları konu alır.
     </p>
   </body>
 </html>
